--- a/3.html
+++ b/3.html
@@ -238,49 +238,74 @@
 
         <img src="다운로드 (1).gif" width="45%"
 
-        <p><font color="green" font size=5>임현식</font></p>
+        <p><font color="yellow" font size=5>임현식</font></p>
 
-        출생
-        1992년 3월 7일 (31세)[2]
-        서울특별시 도봉구[3]
-        국적
-        대한민국 국기
-         대한민국
-        본관
-        풍천 임씨 (豊川 任氏) 29세손
-        신체
-        177cm[4], 73kg[5], A형
-        가족
+         <p><font size=5>출생
+        1992년 3월 7일 (31세)</font>
+         <p><font size=5>서울특별시 도봉구</font>
+         <p><font size=5>국적
+        대한민국</font>
+         <p><font size=5>본관
+        풍천 임씨 (豊川 任氏) 29세손</font>
+         <p><font size=5>신체
+        177cm, 73kg, A형</font>
+         <p><font size=5>가족
         아버지 임지훈, 어머니 박선미
-        형 임윤식(1990년생)[6]
-        학력
+        형 임윤식(1990년생)</font>
+         <p><font size=5>학력
         냉천초등학교 (졸업)
         저동중학교 (전학) → 상해향명중학교 (졸업)
         백석고등학교 (졸업)
         호원대학교 (실용음악학부 보컬전공 11 / 학사)
-        중부대학교 대학원 실용음악과[7]
-        종교
-        가톨릭 (세례명: 아르도)
-        병역
-        대한민국 육군 수도군단 병장 만기전역[8]
-        (2020년 5월 11일 ~ 2021년 11월 14일)
-        소속사
-        무소속
-        소속 그룹
-        비투비, 비투비-블루
-        포지션
-        리드보컬[9]
-        데뷔
+        중부대학교 대학원 실용음악과</font>
+         <p><font size=5>종교
+        가톨릭 (세례명: 아르도)</font>
+         <p><font size=5>병역
+        대한민국 육군 수도군단 병장 만기전역
+        (2020년 5월 11일 ~ 2021년 11월 14일)</font>
+         <p><font size=5>소속사
+        무소속</font>
+         <p><font size=5>소속 그룹
+        비투비, 비투비-블루</font>
+         <p><font size=5>포지션
+        리드보컬</font>
+         <p><font size=5>데뷔
         2012년 3월 21일 비투비 싱글 1집 비밀 (Insane)
         (데뷔일로부터 +4334일, 11주년)
         2019년 10월 14일 미니 1집 RENDEZ-VOUS
-        (데뷔일로부터 +1571일, 4주년)
-        MBTI
-        INTP[10]
-        별명
-        문단 참조
-        좌우명
-        생각이 현실이 된다.
+        (데뷔일로부터 +1571일, 4주년)</font>
+         <p><font size=5>MBTI
+        INTP</font>
+        
+         <p><font size=5>좌우명
+        생각이 현실이 된다.</font>
+
+        <p><font color="gray" font size=5>비투비의 서은광, 이민혁과 더불어 학창 시절에 우등생이었다고 한다. 당시에 반에서 1,2등도 해봤을 정도로 공부를 잘해서 주변에서 과학고등학교와 외국어고등학교를 권유했는데 만약 음악을 하지 않았더라면 치과의사를 했을 거라고 한다.</font></p>
+
+        <p><font color="gray" font size=5>초등학교 4학년 때 같은 학년 아이들이 만든 팬카페가 있었을 정도로 인기가 많았다고 한다. 당시 팬카페 회원 수는 20명 정도로, 게시판에 들어가면 여자아이들이 임현식을 두고 싸우고 있었다고 그중 운영자였던 여자아이가 현식에게 그 카페에 가입해달라고 해서 카페에 가입한 뒤 게시물들을 직접 보기도 했다고 한다.</font></p>
+
+        <p><font color="gray" font size=5>EXO의 디오와 백석고등학교 동창이다. 임현식이 중국의 상하이로 유학을 갔다 전학을 왔을 때 친해졌는데 헤븐리보이스라는 보컬 동아리에서 함께 활동했었다고 한다. 이 때 유명한 일화로는 임현식이 반에서 가장 노래 잘하는 애가 누구냐고 친구들에게 물어보자 다들 디오라고 했고 후에 임현식은 디오에게 전학온 당일 찾아가 "니가 여기 노래 짱이라며? 같이 축제 나가자!"라고 말한 뒤 학교 축제에서 둘이 같이 노래를 불렀다고 한다. 당시 디오는 이 상황에 매우 당황했다고 언급했다</font></p>
+
+        <p><font color="gray" font size=5>그리워하다의 응원법을 직접 피드백했는데 음을 정확히 살리라고 한다든가, 피치 떨어지지 말라고 하는 등 스파르타식 보컬 디렉팅 스타일로 했다.</font></p>
+
+        <p><font color="gray" font size=5>비투비 내에서 제일 많이 먹는 대식가로 식사 여부에 따라 텐션이 확연히 차이난다. 그러다보니 컴백 시기에 맞춰 다이어트도 자주 하는 편인데 4일 만에 4kg을 감량했을 당시 비트콤에선 마른게 눈에 보일 정도였다.
+        </font></p>
+
+        <p><font color="gray" font size=5>아버지가 한국 포크송의 원류 임지훈이며 몇몇 방송이나 라디오에서 아버지와 동반 출연하여 부자의 케미를 보여주었다.</font></p>
+
+        <p><font color="gray" font size=5>인터뷰에서 대통령이 없는 국가에서 활동하는 경험도 했다고 언급해 화제가 되었다.
+        </font></p>
+
+        <p><font color="gray" font size=>52016년 설날에는 아버지 임지훈이 진행하는 '밤을 잊은 그대에게' 더블 DJ를 했는데 이 때문에 게시판이 중장년층 위주에서 키스 더 라디오처럼 10~20대 젊은 팬들 위주의 게시판으로 바뀐 듯한 현상이 일어났다.
+            </font></p>
+
+
+
+
+
+
+
+
 
 
 
